new stories: no, yue, zh

--- a/stories/index.html
+++ b/stories/index.html
@@ -110,7 +110,7 @@
       <td>0007</td>
       <td><a href="http://africanstorybook.org/stories/looking-water">Looking for water</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0007">eo</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
+      <td><a href="#eo0007">eo</a>, <a href="#no0007">no</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
     </tr>
     <tr>
       <td>0008</td>
@@ -131,10 +131,28 @@
       <td><a href="#eo0010">eo</a>, <a href="#yue0010">yue</a>, <a href="#zh0010">zh</a></td>
     </tr>
     <tr>
+      <td>0049</td>
+      <td><a href="http://africanstorybook.org/stories/rainbow">The Rainbow</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
+    </tr>
+    <tr>
       <td>0064</td>
       <td><a href="http://africanstorybook.org/stories/joy-goes-school">Joy goes to school.</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#zh0064">zh</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+    </tr>
+    <tr>
+      <td>0073</td>
+      <td><a href="http://africanstorybook.org/stories/counting">Counting</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#no0073">no</a></td>
     </tr>
     <tr>
       <td>0078</td>
@@ -194,7 +212,7 @@
       <td>0127</td>
       <td><a href="http://africanstorybook.org/stories/different-plays">Different Plays</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0127">eo</a>, <a href="#ja0127">ja</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
+      <td><a href="#eo0127">eo</a>, <a href="#ja0127">ja</a>, <a href="#no0127">no</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
     </tr>
     <tr>
       <td>0129</td>
@@ -213,6 +231,12 @@
       <td><a href="http://africanstorybook.org/stories/akatope">Akatope</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#no0204">no</a>, <a href="#sv0204">sv</a></td>
+    </tr>
+    <tr>
+      <td>0215</td>
+      <td><a href="http://africanstorybook.org/stories/breakfast">Breakfast</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#yue0215">yue</a>, <a href="#zh0215">zh</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -358,6 +382,20 @@
       <td> </td>
     </tr>
     <tr>
+      <td>0049</td>
+      <td>彩虹</td>
+      <td style="text-align: center"><a href="/stories/yue/0049_彩虹.html">HTML</a> · <a href="/stories/yue/0049_彩虹_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td>整餸</td>
+      <td style="text-align: center"><a href="/stories/yue/0067_整餸.html">HTML</a> · <a href="/stories/yue/0067_整餸_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0078</td>
       <td>超牛冒險記</td>
       <td style="text-align: center"><a href="/stories/yue/0078_超牛冒險記.html">HTML</a> · <a href="/stories/yue/0078_超牛冒險記_slides.html" target="_blank">Slideshow</a></td>
@@ -410,6 +448,13 @@
       <td>0127</td>
       <td>玩嘅動作</td>
       <td style="text-align: center"><a href="/stories/yue/0127_玩嘅動作.html">HTML</a> · <a href="/stories/yue/0127_玩嘅動作_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0215</td>
+      <td>早餐</td>
+      <td style="text-align: center"><a href="/stories/yue/0215_早餐.html">HTML</a> · <a href="/stories/yue/0215_早餐_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -500,9 +545,23 @@
       <td> </td>
     </tr>
     <tr>
+      <td>0049</td>
+      <td>彩虹</td>
+      <td style="text-align: center"><a href="/stories/zh/0049_彩虹.html">HTML</a> · <a href="/stories/zh/0049_彩虹_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0064</td>
       <td>乔伊上学</td>
       <td style="text-align: center"><a href="/stories/zh/0064_乔伊上学.html">HTML</a> · <a href="/stories/zh/0064_乔伊上学_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td>做菜</td>
+      <td style="text-align: center"><a href="/stories/zh/0067_做菜.html">HTML</a> · <a href="/stories/zh/0067_做菜_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -566,6 +625,13 @@
       <td>0147</td>
       <td>我和我的家人</td>
       <td style="text-align: center"><a href="/stories/zh/0147_我和我的家人.html">HTML</a> · <a href="/stories/zh/0147_我和我的家人_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0215</td>
+      <td>早饭</td>
+      <td style="text-align: center"><a href="/stories/zh/0215_早饭.html">HTML</a> · <a href="/stories/zh/0215_早饭_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -848,6 +914,13 @@
       <td> </td>
     </tr>
     <tr>
+      <td>0007</td>
+      <td>Lete etter vann</td>
+      <td style="text-align: center"><a href="/stories/no/0007_lete-etter-vann.html">HTML</a> · <a href="/stories/no/0007_lete-etter-vann_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td>Hva gjør du?</td>
       <td style="text-align: center"><a href="/stories/no/0008_hva-gjør-du.html">HTML</a> · <a href="/stories/no/0008_hva-gjør-du_slides.html" target="_blank">Slideshow</a></td>
@@ -858,6 +931,13 @@
       <td>0009</td>
       <td>Hvor er katten min?</td>
       <td style="text-align: center"><a href="/stories/no/0009_hvor-er-katten-min.html">HTML</a> · <a href="/stories/no/0009_hvor-er-katten-min_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0073</td>
+      <td>Telle dyr</td>
+      <td style="text-align: center"><a href="/stories/no/0073_telle-dyr.html">HTML</a> · <a href="/stories/no/0073_telle-dyr_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -879,6 +959,13 @@
       <td>0126</td>
       <td>Skyer</td>
       <td style="text-align: center"><a href="/stories/no/0126_skyer.html">HTML</a> · <a href="/stories/no/0126_skyer_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0127</td>
+      <td>Ulike leker</td>
+      <td style="text-align: center"><a href="/stories/no/0127_ulike-leker.html">HTML</a> · <a href="/stories/no/0127_ulike-leker_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
