--- a/stories/no/0204_akatope.html
+++ b/stories/no/0204_akatope.html
@@ -126,7 +126,7 @@ Alice Kapolondo<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0204/15.jpg" /></p>
 
-<p>Akatopes gamle mor solgte alt hun eide. HUn brukte pengene til å behandle Akatope. Akatope vokste opp til å bli den vakreste jenta i landsbyen.</p>
+<p>Akatopes gamle mor solgte alt hun eide. Hun brukte pengene til å behandle Akatope. Akatope vokste opp til å bli den vakreste jenta i landsbyen.</p>
 
 <div class="pagenum">14</div>
 <p style="page-break-after: always;"></p>
