--- a/stories/yue/0067_整餸_slides.html
+++ b/stories/yue/0067_整餸_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="akatope" class="slide level1">
-<h1>Akatope</h1>
+<section id="整餸" class="slide level1">
+<h1>整餸</h1>
 <center>
-<img src="https://global-asp.github.io/img/0204/01.jpg" />
+<img src="https://global-asp.github.io/img/0067/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/02.jpg" /></p>
-<p>Det var en gang en gammel dame som alltid hadde ønsket seg et barn.</p>
+<p><img src="https://global-asp.github.io/img/0067/02.jpg" /></p>
+<p>我㓟緊薯仔。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/03.jpg" /></p>
-<p>Hun tok den beste leirjorda hun kunne finne og begynte å lage en jente.</p>
+<p><img src="https://global-asp.github.io/img/0067/03.jpg" /></p>
+<p>我切緊椰菜。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/04.jpg" /></p>
-<p>Jenta som var laget av leire ble til en ekte menneskejente.</p>
+<p><img src="https://global-asp.github.io/img/0067/04.jpg" /></p>
+<p>我磨緊紅蘿蔔。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/05.jpg" /></p>
-<p>Den gamle damen var veldig glad. Hun kalte jenta Akatope. Hun var veldig glad i Akatope.</p>
+<p><img src="https://global-asp.github.io/img/0067/05.jpg" /></p>
+<p>我洗緊豆仔。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/06.jpg" /></p>
-<p>Akatope ble advart av sin gamle mor om at hun ikke måtte komme ut av hytta, men hun hørte ikke etter. Hver gang moren ikke var klar over det, snek Akatope seg ut for å leke med de andre barna.</p>
+<p><img src="https://global-asp.github.io/img/0067/06.jpg" /></p>
+<p>我切緊冬南瓜。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/07.jpg" /></p>
-<p>En dag da Akatope var ute og lekte med de andre barna, begynte det å regne kraftig.</p>
+<p><img src="https://global-asp.github.io/img/0067/07.jpg" /></p>
+<p>我斫緊菠菜。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/08.jpg" /></p>
-<p>De andre barna løp til hyttene sine, men da Akatope løp til sin, begynte beina hennes å gå i oppløsning. Hun krøkte seg sammen mellom buskene.</p>
+<p><img src="https://global-asp.github.io/img/0067/08.jpg" /></p>
+<p>阿媽切緊洋蔥。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/09.jpg" /></p>
-<p>De andre barna fortalte foreldrene sine hva som hadde hendt med Akapope. De var lei seg og sjokkerte.</p>
+<p><img src="https://global-asp.github.io/img/0067/09.jpg" /></p>
+<p>我每次切洋蔥都會流眼水。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,72 +168,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0204/10.jpg" /></p>
-<p>Da den gamle damen hørte hva som hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0204/11.jpg" /></p>
-<p>Men det var ikke nødvendig. En stor overraskelse ventet den gamle damen!</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0204/12.jpg" /></p>
-<p>Få dager etter at den foreldreløse jenta hadde blitt ønsket velkommen i den gamle damens hjem, banket det på døra.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0204/13.jpg" /></p>
-<p>&quot;Hvem kan det være,&quot; undret den gamle damen. Da hun åpnet døra var hun fra seg av begeistring.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0204/14.jpg" /></p>
-<p>Akatope hadde kommet hjem. Men hun var trøtt og syk.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0204/15.jpg" /></p>
-<p>Akatopes gamle mor solgte alt hun eide. Hun brukte pengene til å behandle Akatope. Akatope vokste opp til å bli den vakreste jenta i landsbyen.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="akatope-1">Akatope</h2>
-Text: Alice Kapolondo<br> Illustrations: Catherine Groenewald, Microsoft Clip Art and Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Norwegian<br>
+<h2 id="整餸-1">整餸</h2>
+Text: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Kathy Arbuckle<br> Translation: dohliam<br> Language: Cantonese<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/akatope'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/cooking'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
