--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p>For a list of all translated stories in downloadable PDF format, click <a href="stories">the link above</a>.</p>
 
         <div id="btn_div"><p><center><button class="big_btn" type="button" onclick="window.location='translator'">Click here to begin translating stories!</button></p>
-        <p class="stats">Currently there are <span style="font-size: large">94</span> translations in <span style="font-size: large">11</span> languages</p>
+        <p class="stats">This will take you to our simple story translator which you can start using right away.<br>No need to register or log in, just pick a language and start translating!</p></center></div>
 
         <p>There is a <a href="stories/master.html">master list of source stories</a> from the African Storybook Project. Most of these haven't been translated yet, but feel free to pick one you like and start translating!</p>
 
