fix localStorage across versions + linebreaks in language field

--- a/experiments/gt-no/index.html
+++ b/experiments/gt-no/index.html
@@ -19,7 +19,7 @@
 <div id="dynamic_content">
     <div id="messages">Velkommen til den Global-ASP Translator!<br>For å komme i gang, trykk på Oversett! knappen nedenfor.</div>
     <div id="translated_msg" style="display:none">&nbsp;</div>
-    <div id="translator_div" style="display:none">Oversatt av: <span class="editable" contenteditable="true" oninput="localStorage.a=this.innerHTML" id="translator" placeholder="Ditt navn"></span></div>
+    <div id="translator_div" style="display:none">Oversatt av: <span class="editable" contenteditable="true" oninput="localStorage['trno_a']=this.innerHTML" id="translator" placeholder="Ditt navn"></span></div>
 
     <div id="story_table">&nbsp;</div>
 
@@ -82,7 +82,7 @@
         <div id="submit_form" style="display:none">
           <form action="https://formspree.io/globalafricanstorybook@gmail.com" method="post">
             <input type="hidden" type="final" name="name" id="name_line">
-            <input type="text" id="email" name="_replyto" placeholder="Din e-post (valgfritt)" oninput="localStorage.email=this.value" />
+            <input type="text" id="email" name="_replyto" placeholder="Din e-post (valgfritt)" oninput="localStorage['trno_email']=this.value" />
             <input id="thanks" type="hidden" name="_next" value="/experiments/gt-no/thanks.html" />
             <input type="hidden" name="_subject" id="subject_line" value="New submission!" />
             <input type="hidden" name="story_number" id="story_number" value="" />
