--- a/translator/index.html
+++ b/translator/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="translator.css"/>
     <script src="stories.js" type="text/javascript"></script>
     <script src="translator.js" type="text/javascript"></script>
+    <script src="completed.js" type="text/javascript"></script>
   </head>
   <body onload="story_api()">
     <div id="container">
@@ -17,6 +18,7 @@
 
 <div id="dynamic_content">
     <div id="messages">Welcome to the Global-ASP Translator!<br>To get started, press the Translate! button below.</div>
+    <div id="translated_msg" style="display:none">&nbsp;</div>
     <div id="translator_div" style="display:none">Translated by: <span class="editable" contenteditable="true" oninput="localStorage['gtr_a']=this.innerHTML" id="translator" placeholder="Your name"></span></div>
 
     <div id="story_table">&nbsp;</div>
